<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroGisterActivity!</string>
    <string name="app_name">AndroGister</string>
    <string name="pickerNewEntityText">"Créer un nouveau enregistrement"</string>

    <!-- Action -->
    <string name="add">Ajouter</string>
    <string name="edit">Editer</string>
    <string name="delete">Supprimer</string>
    <string name="menu_done">"OK"</string>
    <string name="menu_doNotSave">"Annuler"</string>

    <!-- Menu -->
    <string name="menu_preference">Préférence</string>
    <string name="menu_admin_user">Utilisateurs</string>
    <string name="menu_search">Rechercher</string>

    <!-- Search -->
    <string name="search_person_label">Rechercher une personne</string>
    <string name="search_person_hint">Rechercher nom ou un matricule</string>

    
   <!-- Notification -->
    <string name="order_service_notification_started">Androgister Service démarré</string>
   
    <!-- Preference -->
    <string name="pref_category_general">Général</string>
    <string name="pref_device_id">Identifiant Machine</string>

    <!-- Button -->
    <string name="button_order_edit">Modifier</string>
    <string name="button_order_delete">Supprimer</string>

    <!-- Basket -->
    <string name="basket_sum">Total</string>

    <!-- Basket Keyboard -->
    <string name="kyb_ask_save_basket_credit">Credit</string>
    <string name="kyb_ask_save_basket_cash">Cash</string>
    <string name="kyb_order_view_list">Liste des commandes</string>
    <string name="kyb_person_view_list">Liste des personnes</string>

    <!-- Model Order -->
    <string name="order_number">N°</string>
    <string name="order_uuid">Id</string>
    <string name="order_date">Date</string>
    <string name="order_price">Total</string>
    <string name="order_status">Statut</string>

    <!-- Search Forms -->
    <string name="search_instructions">Utiliser la zone de saisie pour affiner la recherche</string>
    <string name="search_no_results">Aucune résultat trouvé</string>

    <plurals name="search_results">
        <item quantity="one">Un résultat trouvé: </item>
        <item quantity="other">%1$d résultats trouvés: </item>
    </plurals>

    <!-- Model User -->
    <string name="user_firstname">Prénom</string>
    <string name="user_lastname">Nom de famille</string>
    <string name="user_matricule">Maticule</string>

    <!-- Model Person -->
    <string name="person_firstname">Prénom</string>
    <string name="person_lastname">Nom de famille</string>
    <string name="person_matricule">Maticule</string>

</resources>