<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/entity_list_item_container_header"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/order_list_item_orderNum"
        style="@style/entity_list_item"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/order_number"
        android:paddingLeft="10dip" />

    <TextView
        android:id="@+id/order_list_item_orderUuid"
        style="@style/entity_list_item"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/order_uuid"
        android:paddingLeft="10dip" />

    <TextView
        android:id="@+id/order_list_item_status"
        style="@style/entity_list_item"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/order_status"
        android:paddingLeft="10dip" />

    <TextView
        android:id="@+id/order_list_item_date"
        style="@style/entity_list_item"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:paddingLeft="10dip"
        android:text="@string/order_date" />

    <TextView
        android:id="@+id/order_list_item_price"
        style="@style/entity_list_item"
        android:layout_weight="0.2"
        android:text="@string/order_price" 
        android:paddingLeft="10dip" />

</LinearLayout>